--- a/templates/gene.html
+++ b/templates/gene.html
@@ -191,7 +191,7 @@
                     <ul class="dropdown-menu" role="menu" aria-labelledby="transcript_dropdown">
                         {% for transcript in transcripts_in_gene %}
                             <li role="presentation">
-                                <a role="menuitem" tabindex="-1" href="/transcript/{{ transcript.transcript_id }}" target="_blank">
+                                <a role="menuitem" tabindex="-1" href="/exac/transcript/{{ transcript.transcript_id }}" target="_blank">
                                     {{ transcript.transcript_id }}
                                     {% if transcript.transcript_id == gene.canonical_transcript %}
                                         *
